added full authentication system